--- a/Carousel Template · Bootstrap.html
+++ b/Carousel Template · Bootstrap.html
@@ -288,16 +288,22 @@
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="http://localhost/boots/carousel/Carousel%20Template%20%C2%B7%20Bootstrap.html">Home</a></li>
-                <li><a href="http://localhost/boots/carousel/Carousel%20Template%20%C2%B7%20Bootstrap.html">Sobre</a></li>
+                <li class="active"><a href="#top">Home</a></li>
+                <li><a href="#top">Sobre</a></li>
                 
                 <li><a href="http://localhost/boots/carousel/Carousel%20Template%20%C2%B7%20Bootstrap.html">Login</a></li>
 
 
-                <li><a href="http://localhost/boots/carousel/Carousel%20Template%20%C2%B7%20Bootstrap.html">Criar Seu Perfil</a></li>
+                <li><a href="http://localhost/boots/carousel/Carousel%20Template%20%C2%B7%20Bootstrap.html">Crie Seu Perfil</a></li>
 
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
                
+               <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Entrar</button>
+            </form>
+
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
